@@ -2,6 +2,7 @@ package com.interswitchgroup.tx_user_portal.utils;
 
 import com.interswitchgroup.tx_user_portal.entities.*;
 import com.interswitchgroup.tx_user_portal.repositories.OrganizationRepository;
+import com.interswitchgroup.tx_user_portal.repositories.RightsRepository;
 import com.interswitchgroup.tx_user_portal.repositories.RoleRepository;
 import com.interswitchgroup.tx_user_portal.repositories.UserRepository;
 import com.interswitchgroup.tx_user_portal.utils.Enums.UserPermission;
@@ -22,13 +23,15 @@ public class DataInitializer implements CommandLineRunner {
     private final OrganizationRepository orderRepository;
     private final RoleRepository roleRepository;
     private final UserRepository userRepository;
+    private final RightsRepository rightsRepository;
     private final OrganizationRepository organizationRepository;
     PasswordEncoder passwordEncoder;
 
-    public DataInitializer(OrganizationRepository orderRepository, RoleRepository roleRepository, UserRepository userRepository, OrganizationRepository organizationRepository, PasswordEncoder passwordEncoder) {
+    public DataInitializer(OrganizationRepository orderRepository, RoleRepository roleRepository, UserRepository userRepository, RightsRepository rightsRepository, OrganizationRepository organizationRepository, PasswordEncoder passwordEncoder) {
         this.orderRepository = orderRepository;
         this.roleRepository = roleRepository;
         this.userRepository = userRepository;
+        this.rightsRepository = rightsRepository;
         this.organizationRepository = organizationRepository;
         this.passwordEncoder = passwordEncoder;
     }
@@ -43,40 +46,30 @@ public class DataInitializer implements CommandLineRunner {
         Role role3 = new Role(3, "Cool card role", "");
         Role role4 = new Role(4, "Monitoring role", "");
 
+        Right right1 =  new Right(1,"PAN Viewer", "");
+        Right right2 = new Right(2,"Individual Customer Viewer", "");
+        Right right3 = new Right(3, "Token Viewer", "");
+        Right right4 = new Right(4, "Card Blocking", "");
+        rightsRepository.saveAll(List.of(right1, right2, right3, right4));
 
-        Right right1 =  new Right("PAN Viewer", "");
-        Right right2 = new Right("Individual Customer Viewer", "");
-        Right right3 = new Right("Token Viewer", "");
-        Right right4 = new Right("Card Blocking", "");
-
-
-        role1.getRights().add(right1);
-        role1.getRights().add(right2);
-        role1.getRights().add(right3);
-
-        role2.getRights().add(right4);
+        role1.setRights(List.of(right1, right2, right3));
+        role2.setRights(List.of(right4));
         roleRepository.saveAll(List.of(role1, role2, role3, role4));
 
 
         //------------------ORGANIZATIONS---------------------------------
-        Organization org1 = new Organization(1, "Guardian Bank");
-        Organization org2 = new Organization(2, "Family Bank Ltd");
-        Organization org3 = new Organization(3, "Mayfair Bank");
-        Organization org4 = new Organization(4, "Paramount Bank");
-        Organization org5 = new Organization(5, "Sterling Bank");
 
-        orderRepository.saveAll(Arrays.asList(org1, org2, org3, org4, org5));
-
+        Organization org1 = new Organization(1, "Interswitch Group Kenya");
+        orderRepository.saveAll(List.of(org1));
 
         //------------------SUPER ADMIN---------------------------------
-
 
         Optional<User> userOptional = userRepository.findUserByEmailAddress("joe.mak@example.com");
 
         if(userOptional.isEmpty()) {
             User superAdmin = new User();
             String encPass = passwordEncoder.encode("password123");
-            Optional<Organization> organizationOptional = organizationRepository.findByOrganizationId(2);
+            Optional<Organization> organizationOptional = organizationRepository.findByOrganizationId(1);
 
             superAdmin.setEmailAddress("joe.mak@example.com");
             superAdmin.setPassword(encPass);
